tests/untried/neg/t1845.scala
class Tokens { abstract class Token }
trait TokenParsers { val lexical: Tokens }


class MyTokenParsers extends TokenParsers {
  import lexical.*


  val lexical = new Tokens
}
